starts to lay out the html page into sections

--- a/index.html
+++ b/index.html
@@ -7,11 +7,46 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
     crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>TITLE</title>
+  <title>Pizza The Hut</title>
 </head>
 <body>
-  <section class="main">
+  <section class="container-fluid main">
+    <div class="container header">
+      <h1>Welcome to Pizza The Hut!</h1>
+      <p>Pizzas from long ago in a galaxy far, far away.</p>
+    </div>
 
+    <div class="jumbotron order-status">Order Status:</div>
+
+    <div class="container menu">
+
+      <div class="container premades">
+        <h2>Premades</h2>
+        <div class="container row">
+          <div class="col">One</div>
+          <div class="col">Two</div>
+          <div class="col">Three</div>
+        </div>
+      </div>
+
+      <div class="container custom-pizzas">
+        <h2>Make Your Own</h2>
+        <div class="container sizes">
+          <div class="">
+            <h3>Sizes</h3>
+          </div>
+          <div class="container toppings">
+            <div class="row">
+              <h3>Toppings</h3>
+              <div class="col meats">Meats</div>
+              <div class="col veggies">Veggies</div>
+              <div class="col sauces">Sauces</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   <script
