adds functionality to allow selecting a single pizza size (disabling other sizes upon a selection).

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <p>Please select a size for your first pizza</p>
           </div>
           <div class="col">
-            <button aria-pressed="false" class="btn btn-outline-danger">Small</button>
-            <button aria-pressed="false" class="btn btn-outline-danger">Medium</button>
-            <button aria-pressed="false" class="btn btn-outline-danger">Large</button>
-            <button aria-pressed="false" class="btn btn-outline-danger">Family</button>
+            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger size-button small">Small</button>
+            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger size-button medium">Medium</button>
+            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger size-button large">Large</button>
+            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger size-button family">Family</button>
           </div>
         </div>
 
@@ -57,19 +57,19 @@
             <div class="container m-2 p-2 col meats">
               <h4>Meats</h4>
               <div class="row ml-3">
-                <button aria-pressed="false" class="btn btn-outline-warning">One</button>
+                <button data-toggle="button" aria-pressed="false" class="btn btn-outline-warning">One</button>
               </div>
             </div>
             <div class="container m-2 p-2 col veggies">
               <h4>Veggies</h4>
               <div class="row ml-3">
-                <button aria-pressed="false" class="btn btn-outline-info">One</button>
+                <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info">One</button>
               </div>
             </div>
             <div class="container m-2 p-2 col sauces">
               <h4>Sauces</h4>
               <div class="row ml-3">
-                <button aria-pressed="false" class="btn btn-outline-primary">One</button>
+                <button data-toggle="button" aria-pressed="false" class="btn btn-outline-primary">One</button>
               </div>
             </div>
           </div>
