adds buttons for selecting meats options

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         <div class="container m-2 p-2 sizes">
           <div class="col">
             <h3>Size</h3>
-            <p>Please select a size for your first pizza</p>
+            <p>Please first select a size for your pizza</p>
           </div>
           <div class="col">
-            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger size-button small">Small</button>
-            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger size-button medium">Medium</button>
-            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger size-button large">Large</button>
-            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger size-button family">Family</button>
+            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info size-button small">Small</button>
+            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info size-button medium">Medium</button>
+            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info size-button large">Large</button>
+            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info size-button family">Family</button>
           </div>
         </div>
 
@@ -56,20 +56,31 @@
             </div>
             <div class="container m-2 p-2 col meats">
               <h4>Meats</h4>
-              <div class="row ml-3">
-                <button data-toggle="button" aria-pressed="false" class="btn btn-outline-warning">One</button>
+              <div class="row">
+                <div class="col">
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info" id="coloClawFish">Colo Claw Fish</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info" id="roastedPorg">Roasted Porg</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info" id="deepFriedNunaLegs">Deep Fried Nuna Legs</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info" id="paddyFrogSnack">Paddy Frog Snack</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info" id="banthaTartare">Bantha Tartare</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info" id="groatChop">Groat Chop</button>
+                </div>
               </div>
             </div>
             <div class="container m-2 p-2 col veggies">
               <h4>Veggies</h4>
-              <div class="row ml-3">
-                <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info">One</button>
+              <div class="row">
+                <div class="col">
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info">One</button>
+                </div>
               </div>
             </div>
             <div class="container m-2 p-2 col sauces">
               <h4>Sauces</h4>
-              <div class="row ml-3">
-                <button data-toggle="button" aria-pressed="false" class="btn btn-outline-primary">One</button>
+              <div class="row">
+                <div class="col">
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info">One</button>
+                </div>
               </div>
             </div>
           </div>
