adds functionality to select one or more meats

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
               <h4>Meats</h4>
               <div class="row">
                 <div class="col">
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info" id="coloClawFish">Colo Claw Fish</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info" id="roastedPorg">Roasted Porg</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info" id="deepFriedNunaLegs">Deep Fried Nuna Legs</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info" id="paddyFrogSnack">Paddy Frog Snack</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info" id="banthaTartare">Bantha Tartare</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info" id="groatChop">Groat Chop</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info meat" id="coloClawFish">Colo Claw Fish</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info meat" id="roastedPorg">Roasted Porg</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info meat" id="deepFriedNunaLegs">Deep Fried Nuna Legs</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info meat" id="paddyFrogSnack">Paddy Frog Snack</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info meat" id="banthaTartare">Bantha Tartare</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info meat" id="groatChop">Groat Chop</button>
                 </div>
               </div>
             </div>
