--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
               <h4>Veggies</h4>
               <div class="row">
                 <div class="col">
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info">One</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info veggie" id="meiloorunFruit">Meiloorun Fruit</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info veggie" id="floatingNabooFruit">Floating Naboo Fruit</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info veggie" id="crispedInfernoWeed">Crisped Inferno Weed</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info veggie" id="lalarenBloom">Lalaren Blooms</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info veggie" id="volchoSprig">Volcho Sprigs</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info veggie" id="spetzna">Spetzna</button>
                 </div>
               </div>
             </div>
@@ -88,8 +93,6 @@
       </div>
 
 <!--
-const MEATS = ["coloClawFish","roastedPorg","deepFriedNunaLegs","paddyFrogSnack","banthaTartare","groatChop"]
-const VEGGIES = ["meiloorunFruit","floatingNabooFruit","crispedInfernoWeed","lalarenBloom","volchoSprig","spetzna"]
 const SAUCES = ["marinara","thalaSirenMilkSauce"] -->
 
 
