--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>Pizzas from a long time ago in a galaxy far, far away.</p>
     </div>
 
-    <div class="jumbotron order-status">Order Status:</div>
+    <div class="jumbotron order-status"></div>
 
     <div class="container menu">
 
@@ -67,6 +67,9 @@
                 </div>
               </div>
             </div>
+
+            <hr />
+
             <div class="container m-2 p-2 col veggies">
               <h4>Veggies</h4>
               <div class="row">
@@ -80,21 +83,25 @@
                 </div>
               </div>
             </div>
+
+            <hr />
+
             <div class="container m-2 p-2 col sauces">
               <h4>Sauces</h4>
               <div class="row">
                 <div class="col">
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info">One</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info sauce" id="marinara">Marinara</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info sauce" id="thalaSirenMilkSauce">Thala Siren Milk Sauce</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
+
+        <hr />
+
+        <button class="btn btn-lg btn-block btn-outline-primary" id="add-pizza-button">Add Pizza To Order!</button>
       </div>
-
-<!--
-const SAUCES = ["marinara","thalaSirenMilkSauce"] -->
-
 
     </div>
   </section>
