adds functionality for UI to add a pizza to the total order and reset the ui elements to allow adding more pizzas

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       <p>Pizzas from a long time ago in a galaxy far, far away.</p>
     </div>
 
-    <div class="jumbotron order-status"></div>
+    <div class="jumbotron order-status">
+      <div class="order-total"></div>
+      <div class="current-pizza"></div>
+    </div>
 
     <div class="container menu">
 
