adds margins/padding to be consistent across elements. updates order ui after order place button is clicked.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
       <p>Pizzas from a long time ago in a galaxy far, far away.</p>
     </div>
 
-    <div class="jumbotron order-status">
-      <div class="order-total"></div>
-      <div class="current-pizza"></div>
+    <div class="container">
+      <div class="card m-2 p-2 order-status">
+        <div class="p-5 order-total"></div>
+        <div class="p-2 current-pizza"></div>
+      </div>
     </div>
 
     <div class="container menu">
