--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
   <section class="container-fluid main">
-    <div class="container-fluid pl-5 pr-5 header">
+    <div class="container-fluid text-center text-uppercase pl-5 pr-5 header">
       <h1>Welcome to Pizza The Hut!</h1>
       <p>Pizzas from a long time ago in a galaxy far, far away.</p>
     </div>
-    <div class="container">
+    <div class="container pb-5">
       <div class="container card m-2 p-2 order-status">
         <div class="p-2 order-total"></div>
         <div class="p-2 current-pizza"></div>
@@ -27,6 +27,14 @@
           <div class="col">
             <h3>Size</h3>
             <p>Please first select a size for your pizza</p>
+          </div>
+          <div class="warning">
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+              <strong>Forgot Size!</strong> Please select a size for this pizza before continuing.
+              <button type="button" id="close-warning" class="close" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
           </div>
           <div class="col">
             <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info size-button small">Small</button>
@@ -46,12 +54,12 @@
               <h4>Meats</h4>
               <div class="row">
                 <div class="col">
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info meat" id="coloClawFish">Colo Claw Fish</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info meat" id="roastedPorg">Roasted Porg</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info meat" id="deepFriedNunaLegs">Deep Fried Nuna Legs</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info meat" id="paddyFrogSnack">Paddy Frog Snack</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info meat" id="banthaTartare">Bantha Tartare</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info meat" id="groatChop">Groat Chop</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger meat" id="coloClawFish">Colo Claw Fish</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger meat" id="roastedPorg">Roasted Porg</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger meat" id="deepFriedNunaLegs">Deep Fried Nuna Legs</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger meat" id="paddyFrogSnack">Paddy Frog Snack</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger meat" id="banthaTartare">Bantha Tartare</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger meat" id="groatChop">Groat Chop</button>
                 </div>
               </div>
             </div>
@@ -60,12 +68,12 @@
               <h4>Veggies</h4>
               <div class="row">
                 <div class="col">
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info veggie" id="meiloorunFruit">Meiloorun Fruit</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info veggie" id="floatingNabooFruit">Floating Naboo Fruit</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info veggie" id="crispedInfernoWeed">Crisped Inferno Weed</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info veggie" id="lalarenBloom">Lalaren Blooms</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info veggie" id="volchoSprig">Volcho Sprigs</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info veggie" id="spetzna">Spetzna</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success veggie" id="meiloorunFruit">Meiloorun Fruit</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success veggie" id="floatingNabooFruit">Floating Naboo Fruit</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success veggie" id="crispedInfernoWeed">Crisped Inferno Weed</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success veggie" id="lalarenBloom">Lalaren Blooms</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success veggie" id="volchoSprig">Volcho Sprigs</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success veggie" id="spetzna">Spetzna</button>
                 </div>
               </div>
             </div>
@@ -81,7 +89,6 @@
             </div>
           </div>
         </div>
-        <hr />
         <button class="btn btn-lg btn-block btn-outline-primary" id="add-pizza-button">Add Pizza To Order!</button>
       </div>
     </div>
