adds a font and makes the buttons bigger. indents to show hierarchy better.

--- a/index.html
+++ b/index.html
@@ -36,54 +36,53 @@
               </button>
             </div>
           </div>
-          <div class="col">
-            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info size-button small">Small</button>
-            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info size-button medium">Medium</button>
-            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info size-button large">Large</button>
-            <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info size-button family">Family</button>
+          <div class="container m-2 p-2">
+            <div class="col">
+              <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info btn-lg size-button small">Small</button>
+              <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info btn-lg size-button medium">Medium</button>
+              <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info btn-lg size-button large">Large</button>
+              <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info btn-lg size-button family">Family</button>
+            </div>
           </div>
         </div>
-        <hr />
         <div class="container p-2 toppings">
-          <div class="">
-            <div class="col">
-              <h3>Toppings</h3>
-              <p>Please select one or more of our delicious toppings</p>
-            </div>
+          <div class="col">
+            <h3>Toppings</h3>
+            <p>Please select one or more of our delicious toppings</p>
+          </div>
+          <div class="container p2 m-2">
             <div class="container p-2 col meats">
               <h4>Meats</h4>
               <div class="row">
                 <div class="col">
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger meat" id="coloClawFish">Colo Claw Fish</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger meat" id="roastedPorg">Roasted Porg</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger meat" id="deepFriedNunaLegs">Deep Fried Nuna Legs</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger meat" id="paddyFrogSnack">Paddy Frog Snack</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger meat" id="banthaTartare">Bantha Tartare</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger meat" id="groatChop">Groat Chop</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger btn-lg meat" id="coloClawFish">Colo Claw Fish</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger btn-lg meat" id="roastedPorg">Roasted Porg</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger btn-lg meat" id="deepFriedNunaLegs">Deep Fried Nuna Legs</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger btn-lg meat" id="paddyFrogSnack">Paddy Frog Snack</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger btn-lg meat" id="banthaTartare">Bantha Tartare</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-danger btn-lg meat" id="groatChop">Groat Chop</button>
                 </div>
               </div>
             </div>
-            <hr />
             <div class="container p-2 col veggies">
               <h4>Veggies</h4>
               <div class="row">
                 <div class="col">
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success veggie" id="meiloorunFruit">Meiloorun Fruit</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success veggie" id="floatingNabooFruit">Floating Naboo Fruit</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success veggie" id="crispedInfernoWeed">Crisped Inferno Weed</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success veggie" id="lalarenBloom">Lalaren Blooms</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success veggie" id="volchoSprig">Volcho Sprigs</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success veggie" id="spetzna">Spetzna</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success btn-lg veggie" id="meiloorunFruit">Meiloorun Fruit</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success btn-lg veggie" id="floatingNabooFruit">Floating Naboo Fruit</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success btn-lg veggie" id="crispedInfernoWeed">Crisped Inferno Weed</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success btn-lg veggie" id="lalarenBloom">Lalaren Blooms</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success btn-lg veggie" id="volchoSprig">Volcho Sprigs</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-success btn-lg veggie" id="spetzna">Spetzna</button>
                 </div>
               </div>
             </div>
-            <hr />
             <div class="container p-2 col sauces">
               <h4>Sauces</h4>
               <div class="row">
                 <div class="col">
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info sauce" id="marinara">Marinara</button>
-                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info sauce" id="thalaSirenMilkSauce">Thala Siren Milk Sauce</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info btn-lg sauce" id="marinara">Marinara</button>
+                  <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info btn-lg sauce" id="thalaSirenMilkSauce">Thala Siren Milk Sauce</button>
                 </div>
               </div>
             </div>
