adds styling adjustments and breakpoints for diff screen sizes

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 </head>
 <body>
   <section class="container-fluid main">
-    <div class="container-fluid text-center text-uppercase pl-5 pr-5 header">
+    <div class="container-fluid text-center text-uppercase pl-m-5 pr-m-5 header">
       <h1>Welcome to Pizza The Hut!</h1>
       <p>Pizzas from a long time ago in a galaxy far, far away.</p>
     </div>
-    <div class="container pb-5">
-      <div class="container card m-2 p-2 order-status">
+    <div class="container order pb-5">
+      <div class="container card m-m-2 p-m-2 order-status">
         <div class="p-2 order-total"></div>
         <div class="p-2 current-pizza"></div>
       </div>
-      <div class="container card m-2 p-2 menu">
+      <div class="container card m-m-2 p-m-2 menu">
         <h2>Custom Pizzas</h2>
         <div class="container p-2 sizes">
           <div class="col">
@@ -36,7 +36,7 @@
               </button>
             </div>
           </div>
-          <div class="container m-2 p-2">
+          <div class="container m-m-2 p-m-2">
             <div class="col">
               <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info btn-lg size-button small">Small</button>
               <button data-toggle="button" aria-pressed="false" class="btn btn-outline-info btn-lg size-button medium">Medium</button>
