updates styles: padding, margin, spacing, and media queries

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <h1>Welcome to Pizza The Hut!</h1>
       <p>Pizzas from a long time ago in a galaxy far, far away.</p>
     </div>
-    <div class="container order pb-5">
-      <div class="container card m-m-2 p-m-2 order-status">
+    <div class="container order pt-5 pb-5">
+      <div class="container card m-m-2 p-m-2 pt-2 pb-2 order-status">
         <div class="p-2 order-total"></div>
         <div class="p-2 current-pizza"></div>
       </div>
-      <div class="container card m-m-2 p-m-2 menu">
+      <div class="container card m-m-2 p-m-2 pt-4 pb-4 mb-5 menu">
         <h2>Custom Pizzas</h2>
-        <div class="container p-2 sizes">
+        <div class="container p-2 mt-2 mb-t sizes">
           <div class="col">
             <h3>Size</h3>
             <p>Please first select a size for your pizza</p>
@@ -45,7 +45,7 @@
             </div>
           </div>
         </div>
-        <div class="container p-2 toppings">
+        <div class="container mt-2 mb-2 p-2 toppings">
           <div class="col">
             <h3>Toppings</h3>
             <p>Please select one or more of our delicious toppings</p>
@@ -88,7 +88,7 @@
             </div>
           </div>
         </div>
-        <button class="btn btn-lg btn-block btn-outline-primary" id="add-pizza-button">Add Pizza To Order!</button>
+        <button class="btn btn-lg btn-block btn-outline-primary mt-4 mb-5" id="add-pizza-button">Add Pizza To Order!</button>
       </div>
     </div>
   </section>
